# fast-dbrd-modified

./: CMakeLists.txt  README  README.md  build.sh
dataset/: dbrd_openoffice-ase11-version-for-comparison_ranknet_I-5  dbrd_openoffice-bugfix_ranknet_I-5
experiments/: dbrd_ranknet_bm25f_eclipse_2001-2007-2008_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_test_1_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_test_2_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_test_3_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_test_4_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_test_5_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_window_365_test_1_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_window_365_test_2_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_window_365_test_3_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_window_365_test_4_I-1  dbrd_ranknet_bm25f_eclipse_2001-2007-2008_window_365_test_5_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009-2010_test_1_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009-2010_test_2_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009-2010_test_3_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009-2010_test_4_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009-2010_test_5_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009_2010_window_365_test_1_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009_2010_window_365_test_2_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009_2010_window_365_test_3_I-1  dbrd_ranknet_bm25f_mozilla_2001-2009_2010_window_365_test_4_I-1  dbrd_ranknet_bm25f_netbeans_2001-2007-2008_test_10_I-1  (+115 more)
src/: CMakeLists.txt
src/ranknet/: AbstractRankNetLearner.cc  AbstractRankNetLearner.h
src/util/: CmdOption.cc  CmdOption.h
(+26 files in other folders)
